...
      style={[
        styles.startButtonWrapper,
        isTabletPortrait && styles.startButtonWrapperTabletPortrait,
      ]}
    >
      <PressableScale
        testID="btn-start"
        accessibilityLabel={t("a11y:startGame")}
        accessibilityRole="button"
        style={[styles.startButton, { backgroundColor: activeTheme.accentColor }]}
        onPress={() => {
          void handleStartGame()
        }}
...
